--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,10 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+      <h1 class="mt-5 mb-5">Domain Generator exercise</h1>
+      <div id="lista-dominios" class="pb-2"></div>
+      <div class="p-4">
+        <p>Made with ❤️ by Francisco Espinosa</p>
       </div>
     </div>
   </body>
